Fix image layout issues

--- a/backend/src/assets/css/booking-list.css
+++ b/backend/src/assets/css/booking-list.css
@@ -12,6 +12,13 @@ div.bs-list {
 div.bs-list a.cell-company {
     display: flex;
     align-items: center;
+    width: 60px;
+    height: 30px;
+}
+
+div.bs-list a.cell-company img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 div.bs-list span.bs {
@@ -90,6 +97,13 @@ div.bs-list div.booking-details div.booking-detail div.booking-detail-value div.
     display: flex;
     align-items: center;
     margin-bottom: 5px;
+    width: 60px;
+    height: 30px;
+}
+
+div.bs-list div.booking-details div.booking-detail div.booking-detail-value div.car-company img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 div.bs-list div.booking-details div.booking-detail div.booking-detail-value label.car-company-name {
