--- a/backend/src/assets/css/car-list.css
+++ b/backend/src/assets/css/car-list.css
@@ -53,7 +53,8 @@ section.car-list .empty-list {
     section.car-list article div.car .car-img {
         margin-top: 15px;
         margin-bottom: 0;
-        width: 75%;
+        max-width: 75%;
+        max-height: 75%;
     }
 
     section.car-list article div.car div.car-company {
@@ -68,6 +69,16 @@ section.car-list .empty-list {
         border: 1px solid #e6e6e6;
         border-radius: 3px;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 62px;
+        height: 32px;
+    }
+
+    section.car-list article div.car div.car-company span.car-company-logo img {
+        max-width: 100%;
+        max-height: 100%;
     }
 
     section.car-list article div.car div.car-company a.car-company-info {
@@ -225,7 +236,8 @@ section.car-list .empty-list {
     section.car-list article div.car .car-img {
         margin-top: 15px;
         margin-bottom: 0;
-        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
     }
 
     section.car-list article div.car div.car-company {
@@ -237,6 +249,16 @@ section.car-list .empty-list {
         border: 1px solid #e6e6e6;
         border-radius: 3px;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 62px;
+        height: 32px;
+    }
+
+    section.car-list article div.car div.car-company span.car-company-logo img {
+        max-width: 100%;
+        max-height: 100%;
     }
 
     section.car-list article div.car div.car-company a.car-company-info {
