--- a/backend/src/assets/css/company-filter.css
+++ b/backend/src/assets/css/company-filter.css
@@ -35,10 +35,18 @@ div.company-filter ul.company-list li label {
     font-weight: 400;
     display: flex;
     margin-left: 5px;
+    width: 62px;
+    height: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 div.company-filter ul.company-list li label img {
     margin: 0;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 div.company-filter ul.company-list li input[type='checkbox'] {
